# HF

apps/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/app/: App.tsx  globals.css  layout.tsx  main.tsx  routes.tsx  store.ts
apps/web/src/app/chat/: page.tsx
apps/web/src/features/: index.ts
apps/web/src/hooks/: useFetch.ts  useForm.ts
apps/web/src/lib/: providers.tsx  store.ts
apps/web/src/pages/: index.ts
apps/web/src/routes/: routeConfig.tsx  routes.tsx
apps/web/src/utils/: errorHandler.ts
gateway/api-gateway/: Cargo.toml
gateway/api-gateway/src/: main.rs  routes.rs
services/: REAME.md
services/auth-service/: Cargo.toml
services/auth-service/migrations/: 20250714203214_init_auth_service.sql
services/auth-service/src/: config.rs  main.rs  routes.rs
services/auth-service/src/model/: mod.rs  user_model.rs
services/chat-service/core/: .gitignore  mix.exs
services/chat/core/: README.md
services/guild-service/: .env  Cargo.toml
services/guild-service/src/: db.rs  main.rs
services/guild-service/src/handlers/: guild_handler.rs  mod.rs
services/guild-service/src/models/: guild.rs
services/guild-service/src/router/: guild.rs
services/user-service/: .gitignore  Cargo.toml
services/user-service/migrations/: 20250504151203_create_users_table.sql
services/user-service/src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs
services/user-service/src/controller/: mod.rs  user_controller.rs
services/user-service/src/model/: user_model.rs
services/user-service/src/utils/: jwt.rs  mod.rs
(+23 files in other folders)
