[package]
name = "api-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-service = "2"
actix-cors = "0.7"
futures-util = "0.3"
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"