[package]
name = "guild-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"