[package]
name = "user-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
bcrypt = "0.11"
env_logger = "0.10"
log = "0.4"